--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "express-session": "^1.18.0",
+    "gsap": "^3.12.3",
+    "mitt": "^3.0.1",
+    "swiper": "^11.0.5",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +28,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^10.5.2",
+    "webpack": "^5.90.0"
   },
   "eslintConfig": {
     "root": true,
